alignment fix

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ header {
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 15px;
+  gap: 40px;
 }
 main {
   margin: 100px 0px;
